syntax = "proto3";
package fiagram.account_service;

import "google/protobuf/empty.proto";

option go_package = "grpc/account_service";

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}

  rpc CheckAccountValid(CheckAccountValidRequest) returns (CheckAccountValidResponse) {}
  rpc IsUsernameTaken(IsUsernameTakenRequest) returns (IsUsernameTakenResponse) {}

  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
  rpc GetAccountAll(GetAccountAllRequest) returns (GetAccountAllResponse) {}
  rpc GetAccountList(GetAccountListRequest) returns (GetAccountListResponse) {}

  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse) {}

  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse) {}
}

message AccountInfo {
  enum Role {
    NONE = 0;
    ADMIN = 1;
    MEMBER = 2;
  }
  string username = 1;
  string fullname = 2;
  string email = 3;
  string phone_number = 4;
  Role role = 5;
}


message CreateAccountRequest {
  AccountInfo account_info = 1;
  string password = 2;
}

message CreateAccountResponse {
  uint64 account_id = 1;
}

message GetAccountRequest {
  uint64 account_id = 1;
}

message GetAccountResponse {
  uint64 account_id = 1;
  AccountInfo account = 2;
}

message GetAccountAllRequest {
  google.protobuf.Empty empty = 1;
}

message GetAccountAllResponse {
  repeated uint64 account_id_list = 1;
  repeated AccountInfo account_info_list = 2;
}

message GetAccountListRequest {
  repeated uint64 account_id_list = 1;
}

message GetAccountListResponse {
  repeated uint64 account_id_list = 1;
  repeated AccountInfo account_info_list = 2;
}

message UpdateAccountRequest {
  uint64 account_id = 1;
  AccountInfo updated_account_info = 2;
}

message UpdateAccountResponse {
  uint64 account_id = 1;
}

message DeleteAccountRequest {
  string username = 1;
}

message DeleteAccountResponse {
  string username = 1;
}

message CheckAccountValidRequest {
  string username = 1;
  string password = 2;
}

message CheckAccountValidResponse {
  uint64 account_id = 1;
}

message IsUsernameTakenRequest {
  string username = 1;
}

message IsUsernameTakenResponse {
  bool is_taken = 1;
}
